--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# Site
-title:              CodingGome's dev blog
+﻿# Site
+title:              CodingGom's dev blog
 bio:                'Dev.Software'
 description:        "CodingGom의 개발 발자취"
 reading_time:       true
